--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
    
    <div class="div_container_2">
-       <button id="mouseover_button" class="button_2" role="button">I don't know</button>
+       <button id="mouseover_button" class="button_2" role="button">No</button>
    </div>
     
    <div class="love_line">
