--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
    </div>
     
    <div class="love_line">
-    <p id="para" style="display: none;"> I know you will say yes 😂 
+    <p id="para" style="display: none;"> 
 
         <br>
 
