--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
    </div>
     
    <div class="love_line">
-    <p id="para" style="display: none;"> 
+    <p id="para" style="display: none;" > i know you will say yes 
 
-     
+   </p>
    </div>
 
     <script>
