--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
           
 
-            document.body.style.backgroundImage = "url('couple.jpeg')";
+            document.body.style.backgroundImage = "url('couple.jpg')";
             
         }
 
